objects/AGB__c.object
<CustomObject>
    <fields>
        <fullName>AGB_Link__c</fullName>
        <label>AGB Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AGB_Number__c</fullName>
        <displayFormat>AGB-{0000}</displayFormat>
        <label>AGB Nummer</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AGB_Start_Date__c</fullName>
        <label>AGB Startdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Success_Fee__c</fullName>
        <label>Fixes Erfolgshonorar</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Keep__c</fullName>
        <label>Behalten</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_information__c</fullName>
        <label>Keine Angabe</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>AGBs</relationshipLabel>
        <relationshipName>AGBs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Produkt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Families</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return__c</fullName>
        <label>Rückgabe</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Success_Fee__c</fullName>
        <label>Erfolgshonorar</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Undecided__c</fullName>
        <label>Unentschlossen</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>AGB</label>
    <nameField>
        <label>AGB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AGBs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>